src/tests/resources/transcripts/errors/interpolation.sif
print "This has an {} empty interpolation"
(-- error
empty interpolation
--)
